paginas de home agregadas y comenando a implementar funcionalidadesde mapa para usaurios anonimios

--- a/activos_comunitarios_app/templates/manage_users.html
+++ b/activos_comunitarios_app/templates/manage_users.html
@@ -308,7 +308,7 @@
     }
 
     // Configurar la URL de redirección final (Django URL)
-    confirmBtn.href = `/toggle-status/${userId}/`;
+    confirmBtn.href = `toggle-status/${userId}/`;
 
     // Mostrar modal
     modal.classList.remove('hidden');
